add welcome and home screen

--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#161616"
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
