--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "expo": {
-    "platforms": ["ios", "android"],
     "name": "sgbr_challenge",
     "slug": "sgbr_challenge",
     "version": "1.0.0",
@@ -14,7 +13,7 @@
     },
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#161616"
     },
     "android": {
@@ -26,7 +25,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/splash.png"
+      "favicon": "./assets/images/adaptive-icon.png"
     },
     "plugins": [
       "expo-router",
@@ -34,7 +33,7 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash.png",
-          "resizeMode": "contain",
+          "resizeMode": "cover",
           "backgroundColor": "#161616"
         }
       ],
